--- a/admin/public/css/style.css
+++ b/admin/public/css/style.css
@@ -585,6 +585,11 @@ a.cta, .cta a {
     background-color: #eee;
 }
 
+.fronts .ui-sortable-placeholder {
+    height: 10px;
+    background-color: #fff;
+}
+
 .fronts .trail .trail__control {
     display: none;
 }
