--- a/admin/app/views/fronts.scala.html
+++ b/admin/app/views/fronts.scala.html
@@ -8,14 +8,14 @@
 
             <select data-bind="options: editions, optionsText: 'id', value: $root.selectedEdition, optionsCaption: 'Edition...'"></select>
 
-            <span data-bind="if: $root.selectedEdition()">
-                <select data-bind="options: $root.selectedEdition().sections, optionsText: 'id', value: $root.selectedSection, optionsCaption: 'Section...'"></select>
+            <span data-bind="with: $root.selectedEdition()">
+                <select data-bind="options: sections, optionsText: 'id', value: $root.selectedSection, optionsCaption: 'Section...'"></select>
 
-                <span data-bind="if: $root.selectedSection()">
-                    <select data-bind="options: $root.selectedSection().blocks, optionsText: 'id', value: $root.selectedBlock, optionsCaption: 'Block...'"></select>
+                <span data-bind="with: $root.selectedSection()">
+                    <select data-bind="options: blocks, optionsText: 'id', value: $root.selectedBlock, optionsCaption: 'Block...'"></select>
 
-                    <span data-bind="if: $root.selectedBlock()">
-                        <a href="#" data-bind="click: displayAllEditions"> &laquo; View in all editions</a>
+                    <span data-bind="with: $root.selectedBlock()">
+                        <a href="#" data-bind="click: $root.displayAllEditions"> &laquo; View in all editions</a>
                     </span>
                 </span>
 
