--- a/common/app/assets/stylesheets/module/_tabs.scss
+++ b/common/app/assets/stylesheets/module/_tabs.scss
@@ -47,7 +47,7 @@ $tabBorderWidth: 2px;
 .tabs .tabs-selected a {
     background: #fff;
     color: #333;
-    font-weight: 500;
+    font-weight: bold;
 }
 
 .tabs a:active {
