--- a/common/app/assets/stylesheets/module/experiments/_story.scss
+++ b/common/app/assets/stylesheets/module/experiments/_story.scss
@@ -30,7 +30,7 @@ $orange: #FF7F00;
     margin: 0 2px;
     border-top: 1px solid #717272;
     padding: 5px;
-    font-weight: 500;
+    font-weight: bold;
 
     &,
     &:link,
