--- a/common/app/assets/stylesheets/module/experiments/_timeline.scss
+++ b/common/app/assets/stylesheets/module/experiments/_timeline.scss
@@ -32,7 +32,7 @@
     font-family: $serifheadline;
     font-size: 18px;
     font-size: 1.8rem;
-    font-weight: 600;
+    font-weight: bold;
     line-height: 22px;
     line-height: 2.2rem;
     min-height: 44px;
