--- a/common/app/assets/stylesheets/module/nav/_nav.scss
+++ b/common/app/assets/stylesheets/module/nav/_nav.scss
@@ -202,7 +202,7 @@
     .is-active .nav__link {
         font-family: $serifheadline !important;
         line-height: 18px !important;
-        font-weight: 600;
+        font-weight: bold;
     }
 
         .nav__item:first-child .nav__link { padding-left: 0; }
