--- a/sport/app/views/fragments/cricketMatchSummary.scala.html
+++ b/sport/app/views/fragments/cricketMatchSummary.scala.html
@@ -1,10 +1,10 @@
 @(theMatch: cricketModel.Match)(implicit request: RequestHeader)
 
-<div class="sport-summary sport-summary--cricket">
+<div class="sport-summary sport-summary--cricket" itemscope itemtype="http://schema.org/SportsEvent">
     <header>
         <time class="sport-summary__date h" datetime="@theMatch.gameDate.toString("yyyy-MM-dd'T'HH:mm:ss'Z'")"
             data-timestamp="@theMatch.gameDate.getMillis">@Format(theMatch.gameDate, "d MMM y")</time>
-        <h3 class="sport-summary__head">@theMatch.description, @theMatch.venueName</h3>
+        <h3 class="sport-summary__head" itemprop="name">@theMatch.description, @theMatch.venueName</h3>
     </header>
     <div class="sport-summary__body">
         <table class="sport-summary__score">
