--- a/common/app/assets/stylesheets/module/_lightbox-gallery.scss
+++ b/common/app/assets/stylesheets/module/_lightbox-gallery.scss
@@ -17,8 +17,8 @@ i.gallery__watermark {
 }
 
 .gallery--hide-furniture {
+    .gallery__nav .gallery-arrow-cta,
     .gallery__watermark,
-    .gallery__nav,
     .gallerycaption  {
         display: none;
     }
@@ -222,9 +222,14 @@ i.gallery__watermark {
     border: 0;
     background: transparent;
     margin: 0 auto;
+    width: 100%;
     height: 29px;
     display: block;
     padding: 0;
+
+    .gallery-arrow-cta {
+        margin: 0 auto;
+    }
 }
 
 .captioncontrol--show {
@@ -235,7 +240,8 @@ i.gallery__watermark {
     }
 
     @media (orientation:landscape) {
-        margin-top: -29px;
+        position: absolute;
+        bottom: 0;
     }
 }
 
