--- a/common/app/assets/stylesheets/module/_lightbox-gallery.scss
+++ b/common/app/assets/stylesheets/module/_lightbox-gallery.scss
@@ -36,7 +36,7 @@ i.gallery__watermark {
 
     .gallery__watermark,
     .gallerycaption,
-    .gallerycaption-handle,
+    .captioncontrol,
     .gallery__nav {
         display: none;
     }
