--- a/admin/app/views/fronts.scala.html
+++ b/admin/app/views/fronts.scala.html
@@ -64,7 +64,7 @@
                 </div>
                 <div class="connectedList" data-bind="
                     attr: {'data-list-id': id},
-                    template: {name: 'template_article', foreach: list}"></div>
+                    template: {name: 'template_article', foreach: live}"></div>
             </div>
         </div>
     </div>
