--- a/common/app/assets/stylesheets/theme/_zones.scss
+++ b/common/app/assets/stylesheets/theme/_zones.scss
@@ -1,4 +1,4 @@
-// be sure to update the styleguide when changing these
+// TODO make this human readable
 
 .zone-news .zone-color {
     color: $newsRed; // red
