--- a/admin/public/css/style.css
+++ b/admin/public/css/style.css
@@ -499,7 +499,7 @@ a.cta, .cta a {
 .fronts .list-header__title {
     display: inline-block;
     padding-left: 4px;
-    border-left: 1px solid #5a6b87;
+    border-left: 1px solid #ccc;
 }
 
 .fronts .list-header__title:first-child {
@@ -548,6 +548,14 @@ a.cta, .cta a {
 .fronts .list-header a:hover,
 .fronts .list-header a:visited {
     color: #fff;
+}
+
+.fronts .list-header.liveEdit {
+    background-color: #20a111;
+}
+
+.fronts .list-header.hasUnPublishedEdits {
+    background-color: #f89406;
 }
 
 .fronts .list-header__meta {
