--- a/common/app/assets/stylesheets/layout/_layout.scss
+++ b/common/app/assets/stylesheets/layout/_layout.scss
@@ -77,6 +77,17 @@
     }
 }
 
+@include mq(tablet) {
+    .monocolumn-wrapper {
+        max-width: gs-span(8);
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .monocolumn-wrapper--no-limit {
+        max-width: none;
+    }
+}
+
 
 /* Layout helpers
    ========================================================================== */
