--- a/common/app/assets/stylesheets/module/_article.scss
+++ b/common/app/assets/stylesheets/module/_article.scss
@@ -113,3 +113,61 @@ video {
     height: auto;
     @include user-select;
 }
+
+
+/* Layout changes across devices
+   ========================================================================== */
+
+@include mq(tablet) {
+    .article-body,
+    .article-head,
+    .main-caption {
+        padding-left: 0;
+        padding-right: 0;
+    }
+    .article-head {
+        padding-top: 8px;
+        padding-bottom: 8px;
+    }
+    .d-tabs__item--byline,
+    .byline {
+        font-size: 16px !important;
+        font-size: 1.6rem !important;
+    }
+    .d-tabs__item--byline {
+        padding-left: $baseline !important;
+    }
+    .d-tabs,
+    .byline,
+    .player,
+    .media-primary {
+        margin-left: 0 !important;
+        margin-right: 0 !important;
+    }
+    @media (max-height: 768px) { // Decided with Chris, to refine with real world usage examples
+        .media-primary {
+            float: left;
+            width: gs-span(4);
+            margin-right: $gutter;
+        }
+        .media-primary--comments-on {
+            display: none;
+        }
+        .byline,
+        .d-tabs {
+            display: table-cell;
+            width: 100000px;
+            max-width: 100%;
+        }
+        .d-tabs__item--byline.d-tabs__item--is-active {
+            padding-left: 0 !important;
+        }
+        .byline {
+            margin-bottom: 0 !important;
+
+            + .article__container {
+                padding-top: 12px;
+            }
+        }
+    }
+}
