--- a/sport/app/views/fragments/cricketFullScorecard.scala.html
+++ b/sport/app/views/fragments/cricketFullScorecard.scala.html
@@ -30,7 +30,7 @@
         <table class="sport-fullscorecard__table">
             <thead class="sport-fullscorecard__thead">
                 <tr>
-                    <th>&nbsp;</th>
+                    <th>Batsman</th>
                     <th class="sport-fullscorecard__additional"></th>
                     <th class="sport-fullscorecard__statistic">Runs</th>
                     <th class="sport-fullscorecard__additional sport-fullscorecard__statistic">Balls</th>
@@ -41,7 +41,7 @@
             <tbody class="sport-fullscorecard__tbody">
                 @for(batsman <- innings.batsmen) {
                     <tr>
-                        <td>@batsman.name
+                        <td class="sport-fullscorecard__inline-name">@batsman.name
                             <br class="sport-fullscorecard__inline-info"/>
                             <span class="sport-fullscorecard__inline-info">@batsman.howOut</span>
                         </td>
