--- a/common/app/assets/stylesheets/_vars.scss
+++ b/common/app/assets/stylesheets/_vars.scss
@@ -51,7 +51,9 @@ $darkBlue: #152E5F;
 $lightBlue: #95B2CB;
 $linkBlue: #005689;
 $mushroom: #F4F4EE;
+$medianMushroom: #EDEDE7;
 $darkMushroom: #E3E3DB;
+
 
 
 /* Zones
