--- a/common/app/assets/stylesheets/module/_adslot.scss
+++ b/common/app/assets/stylesheets/module/_adslot.scss
@@ -31,7 +31,7 @@
 .ad-slot-middle-banner-ad {
     background-color: #fff;
     min-height: 0;
-    border-bottom: 1px solid #EDEDE7;
+    border-bottom: 1px solid $medianMushroom;
 }
 
 .ad-slot-middle-banner-ad .ad-container {
