--- a/common/app/assets/stylesheets/module/experiments/_story.scss
+++ b/common/app/assets/stylesheets/module/experiments/_story.scss
@@ -217,7 +217,7 @@ $orange: #FF7F00;
 }
 
 .story-article .article-body p:last-child {
-    border-bottom: 1px solid #EDEDE7;
+    border-bottom: 1px solid $medianMushroom;
     padding-bottom: 8px;
 }
 
